--- a/vignettes/msnset.Rmd
+++ b/vignettes/msnset.Rmd
@@ -30,16 +30,26 @@ library(dplyr)
 > The `MSnSet` class is derived form the `Biobase::eSet` class and mimics the
 `Biobase::ExpressionSet` class classically used for microarray data.
 
-This description is a bit dense and unintelligible, so I will describe an MSnSet
-in my own words:
+This description is a bit dense and unintelligible to the uninitiated.
+Here, I will describe an MSnSet in my own words.
 
-1. An MSnSet is a special type of list (specifically it is an S4 object) that 
+
+MSnSets contain information about an MS experiment. To better understand MSnSets
+we first need to define some terminology.
+
+In a quantitative proteomics experiment we are analysing 'samples' from
+different experimental conditions via MS, e.g. comparing 'samples' from cells treated 
+with a drug versus a control. The quantitative data we eventually
+obtain consists of measurements of 'features'. In this context, features can be 
+PSMs, peptides, or proteins.
+
+- An MSnSet is a special type of list (specifically it is an S4 object) that 
 describes an MS experiment. 
-1. This list contains multiple objects of different types (typically a matrix or
-data.frame) that contains the quantitative data and metadata from an MS experiment.
-1. These underlying objects must have a specific structure (e.g. matching sample 
-names and the correct dimensions), so that each individual object in this 
-special list can be combined when necessary.
+- This list contains multiple objects of different types:
+  - The quantitative data ('assay data'; in a `matrix`)
+  - The associated 'feature data' for each row in the quantification data (in a `Biobase::AnnotatedDataFrame`)
+  - Metadata describing the MS experiment ('phenotype Data'; in a `Biobase::AnnotatedDataFrame`)
+- These underlying objects must have a specific structure. For example the sample names in the assay data (columns) must match the sample names in the phenotype data (rownames) and the assay data and feature data must have the same number of rows.
 
 Conveniently, the `MSnbase` package comes with some example MSnSets. In this
 section we will explore the `msnset` MSnSet. This data set is from an 
@@ -83,15 +93,6 @@ Each slot in `msnset` is described in detail in the **'MSnSet slots'** section
 below. For now we will only concern ourselves with the `assayData`, 
 `featureData`,  and `phenoData` slots. 
 
-MSnSets contain information about an MS experiment. To better understand MSnSets
-we need to define some terminology.
-
-In a quantitative proteomics experiment we are analysing 'samples' from
-different experimental conditions via MS, e.g. comparing 'samples' from cells treated 
-with a drug versus a control. The quantitative data we eventually
-obtain consists of measurements of 'features'. In this context features can be 
-PSMs, peptides, or proteins.
-
 ### assayData
 
 The `assayData` slot contains the quantitative data from the experiment, 
@@ -112,7 +113,7 @@ Lets look at its structure.
 str(msnset_exprs)
 ```
 
-It is a `r nrow(msnset_exprs)` by `r ncol(msnset_exprs)` numeric matrix. 
+It is an `r nrow(msnset_exprs)` by `r ncol(msnset_exprs)` numeric matrix. 
 The data it contains is reporter ion intensities from `r ncol(msnset_exprs)` 
 iTRAQ tags across `r nrow(msnset_exprs)` different PSMs.
 
@@ -146,7 +147,7 @@ or as few columns as you want.
 
 Each **column** of this matrix refers to a particular type of metadata. 
 Each **row** of this matrix corresponds to a **'feature'** which in this case 
-is a PSM. Notice that the number of rows in `featureData` must be the same as
+is a PSM. Thus, the number of rows in `featureData` is the same as
 the number of rows in `assayData`.
 
 ### phenoData
@@ -160,7 +161,7 @@ We can extract this information from the MSnSet into a data.frame with the
 msnset_pdata <- pData(msnset)
 ```
 
-Lets look at its structure.
+Let's look at its structure.
 
 ```{r}
 str(msnset_pdata)
@@ -173,7 +174,7 @@ or as few columns as you want.
 
 Each **column** of this matrix refers to a particular type of metadata. 
 Each **row** of this matrix corresponds to a **'sample'** which in this case 
-is an iTRAQ tag. Notice that the number of rows in `phenoData` must be the 
+is an iTRAQ tag. Thus, the number of rows in `phenoData` is the 
 same as the number of columns in `assayData`.
 
 ## Making an MSnSet
@@ -191,7 +192,7 @@ Lets have a look at our PSM data from PD. It is a data.frame.
 str(psm_tmt_total)
 ```
 
-This data.frame contains have `r nrow(psm_tmt_total)` PSMs. We have 
+This data.frame contains `r nrow(psm_tmt_total)` PSMs. We have 
 quantitative data for each PSM (the `Abundance` columns) and metadata for each 
 PSM (all the other columns).
 
@@ -284,8 +285,7 @@ tmt_pdata$sample <- paste0("sample", 1:10)
 tmt_pdata$treatment <- rep(c("trt", "ctrl"), each = 5)
 ```
 
-Most importantly we have to add some rownames which are identical to the 
-column names of `tmt_exprs`.
+The rownames must be identical to the column names of `tmt_exprs`.
 
 ```{r}
 rownames(tmt_pdata) <- colnames(tmt_exprs)
@@ -453,7 +453,7 @@ experimenter.
 
 ### processingData
 
-Contains the version of MSnbase was used to construct the MSnSet and
+Contains the version of MSnbase used to construct the MSnSet and
 also a log of what processes have been applied to the MSnSet.
 
 * Access the overall object with `processingData(MSnSet)`
